# ai-safety-games

./: .gitignore  README.md  pyproject.toml
scripts/: cheat_demo.py  cheat_eval.py  cheat_interp.py  cheat_test.py  cheat_train.py  cheat_train_multi_arch.py  decision_transformer_demo.py  make_random_dataset.py  show_game_dataset.py
src/ai_safety_games/: DecisionTransformer.py  ScoreTransformer.py  cheat.py  cheat_utils.py  models.py  training.py
src/transformer_games/: cheat.py
tests/: test_cheat_game.py
