[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-safety-games"
version = "0.1.0"
authors = [
  { name="montemac", email="m.macdiarmid@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'transformer-lens @ git+https://github.com/neelnanda-io/TransformerLens.git@v1.2.2',
  'sortedcontainers'
]

[project.urls]
"Homepage" = "https://github.com/montemac/ai-safety-games"


